Change architecture to based on common Shape class